feat: Auto-comment new files with language and path
feat: Implement automated new file comments

This commit introduces a new feature that automatically adds a header comment to newly created files.

The comment intelligently includes:
- The correct line comment syntax for the detected language.
- A human-readable name for the programming language.
- The relative path of the newly created file within the workspace.

This enhancement aims to improve consistency and provide immediate context for new files, streamlining the development workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ dist/
 
 # Node modules
 node_modules/
+package-lock
 
 # VS Code test output
 .vscode-test/
@@ -43,7 +44,3 @@ coverage/
 
 # TypeScript build info
 *.tsbuildinfo
-
-
-
-package-lock.json
