--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Temp/cleanup files
+*NEW.md
+CLEANUP-CHECKLIST.md
+cleanup-project*.ps1
+final-cleanup.ps1
+discord_version_docs.md
+WIKI-SETUP.md
+ROADMAP.md
+
 # Build output
 out/
 dist/
