fix: add manual Discord webhook trigger and fix automatic notifications
- Add sendLatestReleaseWebhook function to discordManager
- GitHub Release Manager now automatically sends Discord notifications
- Add manual webhook trigger command and dashboard button
- Enhanced error handling for webhook failures
- Added graceful fallbacks for release detection

--- a/package.json
+++ b/package.json
@@ -113,6 +113,11 @@
         "icon": "$(settings-gear)"
       },
       {
+        "command": "prismflow.sendLatestReleaseWebhook",
+        "title": "PrismFlow: Send Latest Release Webhook",
+        "icon": "$(rocket)"
+      },
+      {
         "command": "prismflow.showGitHubReleaseManager",
         "title": "PrismFlow: GitHub Release Manager",
         "icon": "$(rocket)"
@@ -367,6 +372,10 @@
         },
         {
           "command": "prismflow.manageGitHubWebhooks",
+          "group": "PrismFlow"
+        },
+        {
+          "command": "prismflow.sendLatestReleaseWebhook",
           "group": "PrismFlow"
         },
         {
