Implement GitWatcher for automatic Discord notifications on external Git pushes
- Added GitWatcher class to monitor .git/refs and .git/HEAD for changes
- Automatically detects commits made outside the extension (Copilot, CLI, etc.)
- Sends Discord notifications for pushes and release tags
- Added test command for debugging GitWatcher functionality
- Integrated GitWatcher into extension lifecycle (activate/deactivate)
- Fixes issue where Discord notifications were not sent for external Git operations

--- a/package.json
+++ b/package.json
@@ -141,6 +141,11 @@
         "command": "prismflow.createCustomQAChecklist",
         "title": "PrismFlow: Create Custom QA Checklist",
         "icon": "$(new-file)"
+      },
+      {
+        "command": "prismflow.testGitWatcher",
+        "title": "PrismFlow: Test Git Watcher",
+        "icon": "$(git-branch)"
       }
     ],
     "configuration": {
