--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prismflow",
   "displayName": "PrismFlow",
   "description": "Visualizes code structure by highlighting nested blocks and providing enhanced navigation for JSON and similar languages.",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "publisher": "Seristic",
   "preview": false,
   "repository": {
@@ -126,6 +126,11 @@
         "command": "prismflow.testDiscordConnectivity",
         "title": "PrismFlow: Test Discord Connectivity",
         "icon": "$(pulse)"
+      },
+      {
+        "command": "prismflow.testReleaseWebhook",
+        "title": "PrismFlow: Test Release Webhook (Debug)",
+        "icon": "$(debug-console)"
       },
       {
         "command": "prismflow.showGitHubReleaseManager",
